--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="container my-4">
+<div class="my-4">
   <h1 class="mb-4">Nossa Loja</h1>
 
   @if (loading()) {
   <div class="d-flex justify-content-center">
-    <div class="spinner-border" role="status">
+    <div class="spinner-border spinner-border-custom" role="status">
       <span class="visually-hidden">Carregando...</span>
     </div>
   </div>
@@ -12,11 +12,9 @@
     {{ error() }}
   </div>
   } @else {
-  <div class="row">
+  <div class="product-grid">
     @for (product of products(); track product.id) {
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <app-product-card [product]="product"></app-product-card>
-    </div>
+    <app-product-card [product]="product"></app-product-card>
     }
   </div>
   }
