--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,16 +6,16 @@
     </a>
 
     <div class="nav-actions">
-      <a class="nav-link" routerLink="/home">🏠 Home</a>
+      <a class="nav-link btn-outline-light" routerLink="/home">🏠 Home</a>
       @if (authService.isLoggedIn()) {
       <a class="nav-link btn-outline-light" routerLink="/cart">🛒 Carrinho <span
           class="badge bg-light text-dark ms-1">{{
           cartService.totalItems() }}</span></a>
-      <a class="nav-link" routerLink="/admin">🛠️ Admin</a>
+      <a class="nav-link btn-outline-light" routerLink="/admin">🛠️ Admin</a>
       <span class="user-badge">👤 Olá, {{ authService.currentUser() }}!</span>
       <button class="btn btn-outline-light btn-sm" (click)="logout()">🚪 Sair</button>
       } @else {
-      <a class="nav-link" routerLink="/login">🔐 Login</a>
+      <a class="nav-link btn-outline-light" routerLink="/login">🔐 Login</a>
       }
     </div>
   </div>
