--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -36,8 +36,8 @@
 
           <div class="mt-3 text-center">
             <small class="text-muted">
-              Usuário de teste: mor_2314<br>
-              Senha de teste: 83r5^_
+              Usuário de teste: johnd<br>
+              Senha de teste: m38rmF$
             </small>
           </div>
         </div>
