--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -26,7 +26,7 @@
               </span>
             </div>
 
-            <h2 class="product-price">R$ {{ product()!.price }}</h2>
+            <h2 class="product-price">{{ product()!.price | currency: 'BRL' }}</h2>
 
             <p class="product-description">{{ product()!.description }}</p>
 
