--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  height: 556px;;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.95));
   border: 1px solid rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(8px);
