--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="my-4">
-  <h1 class="mb-4">Produtos</h1>
+<div class="container my-4">
+  <h1 class="mb-4 home-title">Produtos</h1>
 
   @if (loading()) {
   <div class="d-flex justify-content-center">
