--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container my-4">
   <div class="row justify-content-center">
     <div class="col-md-6 col-lg-4">
       <div class="card mt-5">
