--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container py-5">
+<div class="container my-4">
   @if (loading()) {
     <div class="d-flex justify-content-center py-5">
       <div class="spinner-border spinner-border-custom" role="status"></div>
