--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container my-4">
-  <h1 class="mb-4 home-title">Produtos</h1>
+  <h1 class="mb-4 home-title">{{ 'NAVIGATION.HOME' | translate }}</h1>
 
   @if (loading()) {
   <div class="d-flex justify-content-center">
