--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-6 col-lg-4">
       <div class="card mt-5">
         <div class="card-body">
-          <h2 class="card-title text-center mb-4">Login</h2>
+          <h2 class="card-title text-center mb-4">{{ 'NAVIGATION.LOGIN' | translate }}</h2>
 
           <form (ngSubmit)="onSubmit()">
             <div class="mb-3">
